[gd_scene load_steps=13 format=3 uid="uid://clytdko2adl73"]

[ext_resource type="Script" uid="uid://pb76k3yibqx6" path="res://scenes/game/desktops_manager.gd" id="1_1ng7t"]
[ext_resource type="Shader" uid="uid://eh1631d1ufjf" path="res://assets/shaders/blur.gdshader" id="1_cr7d5"]
[ext_resource type="Texture2D" uid="uid://cup1dk4oajnps" path="res://assets/graphics/bg/bg_dwa.png" id="2_1ng7t"]
[ext_resource type="Texture2D" uid="uid://vgk2yi2n5knh" path="res://assets/graphics/bg/bg1.png" id="3_e2jfa"]
[ext_resource type="PackedScene" uid="uid://6unyipcemho8" path="res://scenes/game/desktop_holder.tscn" id="4_x7djc"]
[ext_resource type="PackedScene" uid="uid://b1dit03ngtyfr" path="res://scenes/desktops/desktop_1.tscn" id="5_kf1ss"]
[ext_resource type="PackedScene" uid="uid://6d35rqg5c6yv" path="res://scenes/desktops/desktop_2.tscn" id="6_j3bd3"]
[ext_resource type="PackedScene" uid="uid://bras2p6rufw1e" path="res://scenes/desktops/desktop_3.tscn" id="7_isvl2"]
[ext_resource type="PackedScene" uid="uid://cpuy36knlslh6" path="res://scenes/desktops/desktop_4.tscn" id="8_gr547"]
[ext_resource type="PackedScene" uid="uid://bue5y3jastl4l" path="res://scenes/desktops/desktop_5.tscn" id="9_yya1h"]
[ext_resource type="PackedScene" uid="uid://bat2tgvlk4cqu" path="res://scenes/desktops/desktop_6.tscn" id="11_e2jfa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kelw5"]
shader = ExtResource("1_cr7d5")

[node name="DesktopsManager" type="Node2D" groups=["DesktopsManager"]]
script = ExtResource("1_1ng7t")

[node name="BlurredBG_Back" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -100
material = SubResource("ShaderMaterial_kelw5")
texture = ExtResource("2_1ng7t")

[node name="BlurredBG_Front" type="Sprite2D" parent="."]
z_index = -100
material = SubResource("ShaderMaterial_kelw5")
texture = ExtResource("3_e2jfa")

[node name="DesktopHolder" parent="." node_paths=PackedStringArray("desktop") instance=ExtResource("4_x7djc")]
desktop = NodePath("Desktop 1")

[node name="Desktop 1" parent="DesktopHolder" instance=ExtResource("5_kf1ss")]
visible = false

[node name="DesktopHolder2" parent="." node_paths=PackedStringArray("desktop") instance=ExtResource("4_x7djc")]
position = Vector2(960, 0)
desktop = NodePath("Desktop2")

[node name="Desktop2" parent="DesktopHolder2" instance=ExtResource("6_j3bd3")]
visible = false

[node name="DesktopHolder3" parent="." node_paths=PackedStringArray("desktop") instance=ExtResource("4_x7djc")]
position = Vector2(1920, 0)
desktop = NodePath("Desktop3")

[node name="Desktop3" parent="DesktopHolder3" instance=ExtResource("7_isvl2")]
visible = false

[node name="DesktopHolder4" parent="." node_paths=PackedStringArray("desktop") instance=ExtResource("4_x7djc")]
position = Vector2(2880, 0)
desktop = NodePath("Desktop4")

[node name="Desktop4" parent="DesktopHolder4" instance=ExtResource("8_gr547")]
visible = false

[node name="DesktopHolder5" parent="." node_paths=PackedStringArray("desktop") instance=ExtResource("4_x7djc")]
position = Vector2(2880, 0)
desktop = NodePath("Desktop5")

[node name="Desktop5" parent="DesktopHolder5" instance=ExtResource("9_yya1h")]
visible = false

[node name="DesktopHolder6" parent="." node_paths=PackedStringArray("desktop") instance=ExtResource("4_x7djc")]
position = Vector2(3840, 0)
desktop = NodePath("Desktop6")

[node name="Desktop6" parent="DesktopHolder6" instance=ExtResource("11_e2jfa")]
visible = false
